--- a/side-nav/sideNav.css
+++ b/side-nav/sideNav.css
@@ -9,10 +9,39 @@ body {
 .nav {
     background-color: #141414;
     color: #ffffff;
-    opacity: 80%;
     height: 100vh;
     max-height: 100%;
     max-width: 414px;
+    display: none;
+    opacity: 0;
+    animation: slide-left 1s;
+}
+
+@keyframes slide-left {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@keyframes hide-nav {
+    100% {
+        transform: translateX(-100%);
+    }
+    0% {
+        transform: translateX(0%);
+    }
+}
+
+.nav-visible {
+    opacity: 80%;
+    display: block;
+}
+
+.btn-invisible {
+    opacity: 0;
     display: none;
 }
 
@@ -47,4 +76,5 @@ body {
     opacity: 70%;
     color: #ffffff;
     cursor: pointer;
+    animation: slide-left 500ms;
 }
